chore: add cSpell.words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,28 @@
 {
   "cSpell.words": [
     "bitangent",
+    "Brdf",
     "cacheable",
     "commitlint",
+    "elif",
+    "GGXL",
+    "GGXV",
     "glsl",
+    "hdri",
+    "Heitz",
     "highp",
+    "ifdef",
     "inversesqrt",
+    "Irad",
+    "ivec",
     "lowp",
     "mediump",
+    "Microfacet",
+    "MTOON",
     "perp",
+    "ppsloan",
+    "RGBE",
+    "Schlick",
     "setmatrix",
     "settexture",
     "setvector",
@@ -16,9 +30,15 @@
     "shaderity",
     "Shaderpack",
     "srgb",
+    "SRGB",
     "texcoord",
+    "Texel",
+    "Toon",
+    "tooned",
+    "Toony",
     "uniformvalue",
-    "vertexandfragment"
+    "vertexandfragment",
+    "WEBGL"
   ],
   "markdownlint.customRules": [
     "\"MD033\": false"
