--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/node": "^14.11.2",
+    "@types/webpack": "^5.28.0",
     "gts": "^3.1.0",
     "husky": "^7.0.1",
     "ts-loader": "^9.2.4",
